# Atelier

./: .gitignore  BLUEPRINT.md  PROGRESS.md  README.md  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/e2e/: multiplayer.spec.ts
docs/: 01-vision-and-overview.md  02-tech-stack.md  03-frontend.md  04-collaboration-engine.md  05-execution-engine.md  06-repo-intelligence.md  07-agent-system.md  08-data-architecture.md  09-backend-architecture.md  10-observability-security.md  11-scale-and-performance.md  12-replay-timeline.md  13-cicd-roadmap.md  14-showcase-and-oss.md  15-deliverables.md
infra/observability/: prometheus.yml
pkg/authtoken/: authtoken.go  authtoken_test.go
pkg/obs/: obs.go
pkg/wire/: ctrl.go  frame.go  frame_test.go
services/collab-relay/: package.json
services/collab-relay/room/: client.go  ctrl.go  manager.go  metrics.go  room.go
services/collab-relay/server/: auth_test.go  server.go  server_test.go
services/collab-relay/store/: store.go  store_test.go
services/conductor/: package.json  vitest.config.ts
services/core-api/: package.json
services/doc-fs/: package.json  tsconfig.json  vitest.config.ts
services/doc-fs/src/: main.ts  (+4 more)
services/indexer/: Cargo.toml  package.json
services/indexer/src/: chunk.rs  embed.rs  extract.rs  index.rs  lang.rs  main.rs
services/workspace-host/: package.json
tests/integration/: pty_test.go
(+65 files in other folders)
